Ajustando últimos detalhes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <section class="row">
                 <article class="col">
                     <a href="pages/recepcao.html">
-                        <div class="op">
+                        <div class="col op">
                             <button id="recepcionista" class="btop">
                                 <img src="img/recepcionista.png" height="70">
                             </button>
