--- a/pages/cozinheiro.html
+++ b/pages/cozinheiro.html
@@ -41,11 +41,13 @@
                     <div id="pedidoCozinheiro" class="pedidos-area"></div>
 
                 </div>
-                <a href="/index.html">
-                    <button  class="voltar">
-                        Voltar
-                    </button>
-                </a>
+                <div class="d-flex justify-content-center">
+                    <a href="/index.html">
+                        <button class="btn btn-primary voltar">
+                            Voltar
+                        </button>
+                    </a>
+                </div>
 
                 
             </main>
