--- a/subpages/cardapio.html
+++ b/subpages/cardapio.html
@@ -51,7 +51,7 @@
                 </select>
             </div>
         </section>
-        <section class="mb-4">
+        <section class="justify-content-center text-center mb-4">
             <button class="btn btn-primary" type="button" onclick="adicionarComida()">Adicionar</button>
         </section>
         <section>
@@ -90,10 +90,15 @@
                 </thead>
                 <tbody id="sobremesas"></tbody>
             </table>
+    
         </section>
-        <a href="/pages/gerente.html">
-            <button class="btn btn-secondary liberar">Voltar</button>
-        </a>
+        <div class="d-flex justify-content-center">
+            <a href="/index.html">
+                <button class="btn btn-primary voltar">
+                    Voltar
+                </button>
+            </a>
+        </div>
     </main>
     
 </body>
