--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
         </div>
     </main>
     <footer>
-        <div class="container-fluid">
-            <p class="mb-0">© Labelezza | Desenvolvido por Thiago Gonçalves Cunha</p>
-        </div>
-
+        <p>© 2024 La Belezza - Desenvolvido por Thiago Gonçalves Cunha</p>
     </footer>
+
     <span id="data"></span>
     
     
