--- a/pages/gerente.html
+++ b/pages/gerente.html
@@ -81,10 +81,12 @@
                     </button>
                 </article>
                 <article class="col-6 col-sm-3 colgerente">
+                    <a href="/subpages/estoques.html">
                     <button class="btopgerente">
                         <i class="fas fa-boxes"></i>
                         Estoques
                     </button>
+                    </a>
                 </article>
                 <article class="col-6 col-sm-3 colgerente">
                     <button class="btopgerente">
