--- a/pages/cozinheiro.html
+++ b/pages/cozinheiro.html
@@ -20,8 +20,8 @@
             rel="stylesheet">
         <link rel="stylesheet" href="../css/cozinheiro.css"> 
         <link rel="stylesheet" href="../css/style.css">
-        <title>La Pikanha</title>
-        <link rel="icon" type="image/x-icon" href="/img/">
+        <title>Cozinheiro </title>
+        <link rel="icon" type="image/x-icon" href="/img/chef-masculino.png">
     </head>
 <body>
     <div class="container-fluid "></div>
