--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>La Belezza</title>
-    <link rel="icon" type="image/x-icon" href="/img/chef-masculino.png">
+    <link rel="icon" type="image/x-icon" href="/img/restaurant_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png">
 
 
     
