--- a/pages/caixa.html
+++ b/pages/caixa.html
@@ -20,8 +20,8 @@
             rel="stylesheet">
         <link rel="stylesheet" href="../css/caixa.css"> 
         <link rel="stylesheet" href="../css/style.css">
-        <title>La Pikanha</title>
-        <link rel="icon" type="image/x-icon" href="/img/">
+        <title>Caixa </title>
+        <link rel="icon" type="image/x-icon" href="/img/money-bag.png">
     </head>
 <body>
     <header id="cab2">
