--- a/pages/gerente.html
+++ b/pages/gerente.html
@@ -22,8 +22,8 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-        <title>La Pikanha</title>
-        <link rel="icon" type="image/x-icon" href="/img/">
+        <title>Gerência</title>
+        <link rel="icon" type="image/x-icon" href="/img/gerente (1).png">
     </head>
 <body>
     <header id="cab2">
